[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.47.0",
]
